# crypto-portfolio-tracker

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  governance-checks.yml  semver-tag-enforcement.yml
cli/: cpt_run.py
governance/constitutional/: CPT_Constitutional_Charter_v1.0.0.md
governance/drift-workspace/: CPT_Drift_Detection_Workspace_Seed_v1.0.0.md
governance/master-prompt-library/: CPT_Master_Prompt_Library_Seed_v1.0.0.md
governance/operator-documentation/: CPT_GitHub_Dual_Layer_Interaction_Protocol_v1.0.0.md  CPT_GitHub_Enforcement_Checklist_v1.0.0.md  CPT_GitHub_Governance_Lifecycle_v1.0.0.md  CPT_Operator_Documentation_Seed_v1.0.0.md  CPT_Repo_Bootstrap_Pack_v1.0.0.md
runs/: README.md
schemas/: README.md  prices.schema.json  report.schema.json  snapshot.schema.json  tx_normalized.schema.json  tx_raw.schema.json
tools/: check_semver_tag.py  validate_schemas.py
